name:                humming
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            queue_classic in Haskell
description:         queue_classic in Haskell
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
homepage:            http://noteed.com/humming
bug-reports:         https://github.com/noteed/humming/issues
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/humming

library
  build-depends:       aeson == 0.6.*,
                       base == 4.*,
                       bytestring == 0.9.*,
                       postgresql-simple == 0.2.*
  exposed-modules:     Database.PostgreSQL.Queue
  ghc-options:         -Wall

executable humming
  hs-source-dirs:      bin
  main-is:             humming.hs
  build-depends:       aeson == 0.6.*,
                       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring == 0.9.*,
                       cmdargs == 0.9.*,
                       humming,
                       postgresql-simple == 0.2.*
  ghc-options:         -Wall

