name:                humming
version:             0.2.0
Cabal-Version:       >= 1.8
synopsis:            queue_classic in Haskell
description:         queue_classic in Haskell
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
homepage:            http://noteed.com/humming
bug-reports:         https://github.com/noteed/humming/issues
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/humming

library
  build-depends:       aeson == 0.6.*,
                       base == 4.*,
                       bytestring > 0.9 && < 0.11,
                       minicron,
                       old-locale == 1.0.*,
                       postgresql-simple >= 0.2 && < 0.4,
                       text == 0.11.*,
                       thyme == 0.3.*,
                       time == 1.4.*,
                       vector-space == 0.8.*
  exposed-modules:     Database.PostgreSQL.Queue,
                       Database.PostgreSQL.Schedule
  ghc-options:         -Wall

executable humming
  hs-source-dirs:      bin
  main-is:             humming.hs
  build-depends:       aeson == 0.6.*,
                       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring > 0.9 && < 0.11,
                       cmdargs == 0.9.*,
                       humming,
                       postgresql-simple >= 0.2 && < 0.4
  ghc-options:         -Wall
