name:                humming
version:             0.4.0
Cabal-Version:       >= 1.8
synopsis:            queue_classic in Haskell
description:         queue_classic in Haskell
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
homepage:            http://noteed.com/humming
bug-reports:         https://github.com/noteed/humming/issues
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/humming

library
  build-depends:       aeson,
                       attoparsec,
                       base >=4.7 && <5,
                       bytestring,
                       minicron,
                       optparse-applicative,
                       postgresql-simple,
                       resource-pool,
                       text,
                       thyme,
                       time,
                       tmp-postgres,
                       vector-space
  exposed-modules:     Database.PostgreSQL.Queue,
                       Database.PostgreSQL.Schedule,
                       Humming.Command,
                       Humming.Database,
                       Humming.Run
  ghc-options:         -Wall

executable humming
  hs-source-dirs:      bin
  main-is:             humming.hs
  build-depends:       aeson,
                       base >=4.7 && <5,
                       bytestring,
                       humming,
                       optparse-applicative,
                       postgresql-simple,
                       text,
                       thyme,
                       vector-space
  ghc-options:         -Wall

test-suite humming-tests
  build-depends:
      base
    , bytestring
    , humming
    , HUnit
    , process
    , test-framework
    , test-framework-hunit
  other-modules:
    Humming.GHCi
    Humming.Runner
  type: exitcode-stdio-1.0
  main-is: run-tests.hs
  hs-source-dirs:
      tests
